sbin_PROGRAMS = herd

herd_SOURCES = \
	cpu.h		\
	dimm.c		\
	dimm.h		\
	dimm_lib.c	\
	dimm_lib.h	\
	license.c	\
	log.c		\
	log.h		\
	main.c		\
	mce.c		\
	mce.h		\
	oipmi.c		\
	oipmi.h		\
	opteron.c	\
	opteron.h	\
	options.c	\
	options.h	\
	opteron_reve.c	\
	opteron_reve.h	\
	opteron_revf.c	\
	opteron_revf.h	\
	opteron_rev10.c	\
	opteron_rev10.h	\
	pci.c		\
	pci.h		\
	serd.c		\
	serd.h		\
	set.c		\
	set.h

AM_CFLAGS = -Wall

man1_MANS = herd.1
EXTRA_DIST = $(man1_MANS)
